[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hellhound"
version = "0.1.0"
description = "Linux-native IoT default-credential scanner with a maintained device-fingerprint database"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bugsy Hewitt" }]
keywords = ["iot", "security", "default-credentials", "scanner", "mirai"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
hellhound = "hellhound.cli:main"

[project.urls]
Homepage = "https://github.com/bugsyhewitt/hellhound"

[tool.setuptools]
packages = ["hellhound"]

[tool.setuptools.package-data]
hellhound = ["fingerprints/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live integration tests requiring Docker (deselect with '-m \"not integration\"')",
]
